--- a/playbooks/webapp.yaml
+++ b/playbooks/webapp.yaml
@@ -10,11 +10,13 @@
     - vars/main.yaml
 
   tasks:
-    - fail:
+    - name: Fail when 'resource_prefix' is not defined
+      ansible.builtin.fail:
         msg: resource prefix should be defined as resource_prefix
       when: resource_prefix is not defined
 
-    - import_tasks: tasks/{{ operation }}.yaml
+    - name: Run operation create/delete
+      ansible.builtin.import_tasks: tasks/{{ operation }}.yaml
 
 - name: Deploy resource from Bastion
   hosts: bastion
@@ -35,4 +37,5 @@
     - vars/main.yaml
 
   tasks:
-    - import_tasks: tasks/deploy_app.yaml
+    - name: Deploy app
+      ansible.builtin.import_tasks: tasks/deploy_app.yaml
