--- a/galaxy.yml
+++ b/galaxy.yml
@@ -16,6 +16,9 @@ tags:
   - cloud
   - infrastructure
   - cluster
+dependencies:
+  amazon.aws: '>=5.1.0'
+  community.aws: '>=5.0.0'
 version: 1.0.0
 build_ignore:
   - .DS_Store
