--- a/playbooks/eda/aws_restore_cloudtrail.yml
+++ b/playbooks/eda/aws_restore_cloudtrail.yml
@@ -8,13 +8,13 @@
         name: cloud.aws_ops.awsconfig_multiregion_cloudtrail
       vars:
         operation: create
-        bucket_name: "{{ bucket_name }}"
+        bucket_name: "{{ s3_bucket_name }}"
         key_prefix: "{{ key_prefix }}"
-        trail_name: "{{ trail_name }}"
+        trail_name: "{{ cloudtrail_name }}"
 
     - name: Include 'cloud.aws_ops.enable_cloudtrail_encryption_with_kms' role
       ansible.builtin.include_role:
         name: cloud.aws_ops.enable_cloudtrail_encryption_with_kms
       vars:
-        enable_cloudtrail_encryption_with_kms_trail_name: "{{ trail_name }}"
+        enable_cloudtrail_encryption_with_kms_trail_name: "{{ cloudtrail_name }}"
         enable_cloudtrail_encryption_with_kms_kms_key_id: "{{ kms_key_alias }}"
