--- a/playbooks/eda/aws_restore_cloudtrail_encryption.yml
+++ b/playbooks/eda/aws_restore_cloudtrail_encryption.yml
@@ -7,5 +7,5 @@
       ansible.builtin.include_role:
         name: cloud.aws_ops.enable_cloudtrail_encryption_with_kms
       vars:
-        enable_cloudtrail_encryption_with_kms_trail_name: "{{ trail_name }}"
+        enable_cloudtrail_encryption_with_kms_trail_name: "{{ cloudtrail_name }}"
         enable_cloudtrail_encryption_with_kms_kms_key_id: "{{ kms_key_alias }}"
