--- a/changelogs/changelog.yaml
+++ b/changelogs/changelog.yaml
@@ -18,4 +18,8 @@ releases:
     - linting.yml
     release_date: '2022-11-16'
   1.0.3:
+    changes:
+      release_summary: This release updates the documentation for the collection.
+    fragments:
+    - summary.yml
     release_date: '2023-03-17'
