--- a/rulebooks/aws_manage_cloudtrail_encryption.yml
+++ b/rulebooks/aws_manage_cloudtrail_encryption.yml
@@ -4,7 +4,7 @@
   sources:
     - ansible.eda.aws_cloudtrail:
         connection:
-          region_name: 'us-east-1'
+          region_name: vars.region_name
         delay: 5
   rules:
     - name: Cancels the deletion of the KMS key and re-enables it
@@ -14,18 +14,18 @@
            name: playbooks/eda/aws_restore_kms_key.yml
 
     - name: Re-create the CloudTrail
-      condition: event.CloudTrailEvent.eventName=="DeleteTrail" and event.CloudTrailEvent.name == "{{ cloudtrail_name }}"
+      condition: event.CloudTrailEvent.eventName=="DeleteTrail" and event.CloudTrailEvent.name == vars.cloudtrail_name
       action:
         run_playbook:
            name: playbooks/eda/aws_restore_cloudtrail.yml
 
     - name: Enable CreateTrail encryption
-      condition: event.CloudTrailEvent.eventName=="UpdateTrail" and event.CloudTrailEvent.name == "{{ cloudtrail_name }}" and event.CloudTrailEvent.requestParameters.kmsKeyId==""
+      condition: event.CloudTrailEvent.eventName=="UpdateTrail" and event.CloudTrailEvent.name == vars.cloudtrail_name and event.CloudTrailEvent.requestParameters.kmsKeyId==""
       action:
          run_playbook:
            name: playbooks/eda/aws_restore_cloudtrail_encryption.yml
 
-    - name: Debug when S3 bucket is deleted and event.CloudTrailEvent.bucketName == "{{ s3_bucket_name }}"
+    - name: Debug when S3 bucket is deleted and event.CloudTrailEvent.bucketName == vars.s3_bucket_name
       condition: event.CloudTrailEvent.eventName=="DeleteBucket"
       action:
         debug:
