--- a/.config/ansible-lint.yml
+++ b/.config/ansible-lint.yml
@@ -1,3 +1,6 @@
+---
+profile: production
+strict: true
 skip_list:
   - ignore-errors  # Use failed_when and specify error conditions instead of using ignore_errors.
   - meta-no-info  # meta/main.yml should contain relevant info.
