--- a/playbooks/eda/aws_restore_cloudtrail.yml
+++ b/playbooks/eda/aws_restore_cloudtrail.yml
@@ -9,7 +9,7 @@
       vars:
         operation: create
         bucket_name: "{{ s3_bucket_name }}"
-        key_prefix: "{{ key_prefix }}"
+        key_prefix: "{{ s3_key_prefix }}"
         trail_name: "{{ cloudtrail_name }}"
 
     - name: Include 'cloud.aws_ops.enable_cloudtrail_encryption_with_kms' role
