--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 /tests/output/
+/tests/integration/integration_config.yml
 /tests/integration/inventory
 /changelogs/.plugin-cache.yaml
 tests/integration/cloud-config-*
